--- a/index.html
+++ b/index.html
@@ -1,315 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Bill(Xiang) Li's personal website</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Civic - CV Resume">
-	<meta name="keywords" content="resume, civic, onepage, creative, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+    <title>Bill Li - Software Engineer</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Civic - CV Resume">
+    <meta name="keywords" content="resume, civic, onepage, creative, html">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="shortcut icon"/>
 
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700" rel="stylesheet">
 
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/flaticon.css"/>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous"/>
-	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/magnific-popup.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/flaticon.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="css/owl.carousel.css"/>
+    <link rel="stylesheet" href="css/magnific-popup.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 
 
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 </head>
 <body>
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
-	
-	<div class="home-three-style">
-		<!-- Header section start -->
-		<header class="header-section">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-4">
-					</div>
-					<div class="col-md-8 text-md-right header-buttons">
-						<a href="./pdf/Bill Li resume.pdf" class="site-btn">Resume</a>
-					</div>
-				</div>
-			</div>
-		</header>
-		<!-- Header section end -->
-		
-		<div class="container-fluid p-0">
-			<div class="row m-0">
-				<div class="col-xl-5 col-lg-5 p-0">
-					<div class="main-left-area h-100">
-						<img src="img/pusheen.png" alt="" width="50%">
-						<h5><br>^^^My spiritual animal^^^</h5>
-						<section class="intro-section">				
-							<figure class="hero-image">
-								<img src="img/profile.jpg" alt="">
-							</figure>
-							<div class="hero-text">
-								<h2>Bill(Xiang)<br>Li</h2>
-								<p>CS student with a twist</p>
-							</div>
-							<p class="mb-5">🏎️I do A LOT of racing at circuits all over🏎️<br>📈I think A LOT about macroeconomics📈<br>🎸I play A LOT of musical instruments🎸</p>
-							<div class="hero-info pt-5">
-								<h2>Important Facts</h2>
-								<ul>
-									<li><span>Favorite Car</span>Caterham Super 7</li>
-									<li><span>Favorite Band</span>Cake🎂</li>
-									<li><span>Favorite Food</span>Pizza🍕</li>
-									<li><span>Favorite Editor</span>Vim✌️</li>
-									<li><span>Indentation</span>TABS📑</li>									
-								</ul>
-							</div>
-						</section>
-
-<!-- 						<section class="extra-section spad">
-							<div class="section-title">
-								<h2>Extra Skills</h2>
-							</div>
-							<div class="row">
-								<div class="col-md-6 text-center">
-									<div class="fact-box trans">
-										<div class="fact-content">
-											<div class="circle-progress">
-												<div id="progress1" class="prog-circle"></div>
-												<div class="progress-info">
-													<h2>75%</h2>
-												</div>
-												<div class="prog-title">
-													<h3>Inspiration</h3>
-													<p>Etiam nec odio vestibulum est.</p>
-												</div>			
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6 text-center">
-									<div class="fact-box trans">
-										<div class="fact-content">
-											<div class="circle-progress">
-												<div id="progress2" class="prog-circle"></div>
-												<div class="progress-info">
-													<h2>83%</h2>
-												</div>
-												<div class="prog-title">
-													<h3>Inspiration</h3>
-													<p>Etiam nec odio vestibulum est.</p>
-												</div>			
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="fact-box">
-										<div class="fact-content">
-											<img src="img/icon/1-w.png" alt="">
-											<h2>14</h2>
-											<p>Years of Experience</p>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="fact-box">
-										<div class="fact-content">
-											<img src="img/icon/2-w.png" alt="">
-											<h2>9</h2>
-											<p>Awards Won</p>
-										</div>
-									</div>
-								</div>
-							</div>
-						</section> -->
-						<section class="language-section spad">
-							<div class="section-title">
-								<h2>Languages</h2>
-							</div>
-							<ul class="language-progress">
-								<li>English <div class="lan-prog" data-lanprogesss="5"></div></li>
-								<li>Chinese <div class="lan-prog" data-lanprogesss="5"></div></li>
-							</ul>
-						</section>
-						<div class="social-links">
-							<a href="https://www.linkedin.com/in/xiang-bill-li-6a197188/"><i class="fab fa-linkedin"></i></a>
-							<a href="https://github.com/lx93"><i class="fab fa-github"></i></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-xl-6 col-lg-7">
-					<div class="main-right-area">
-						<!-- Resume section start -->
-						<section class="resume-section spad pt-0">
-							<div class="section-title">
-								<h2>Experience & Projects</h2>
-							</div>
-							<ul class="resume-list">
-								<li>
-									<h2>2017-2018</h2>
-									<h3>Point Payment Technologies</h3>
-									<h4>Founder</h4>
-									<p>Created to provide small businesses with mobile app based prepaid debit payment solution. Participated in Launch Chapel Hill accelerator incubator in S2018.
-									<ul> * Market research: identified customer pain points through extensive market research and interviewing ~50 local businesses; calculated TAM size and projected financials.</ul>
-									<ul> * Business development: Prepared and refined pitch deck, presenting to investors and local communities, met with over 100 potential customers and establishing legal entities.</ul>
-									<ul> * Self-taught React from scratch, and thru a two-month long code sprint delivered and published two apps to Google Play Store, along with shipping a working backend using and deployed on AWS/Heroku.</ul>
-
-
-								</li>
-<!-- 								<li>
-									<h2>2014-2016</h2>
-									<h3>Web Design Company</h3>
-									<h4>Web Designer</h4>
-									<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
-								</li> -->
-							</ul>
-						</section>
-						<!-- Resume section end -->
-
-						<!-- Resume section start -->
-						<section class="resume-section spad pt-0">
-							<div class="section-title">
-								<h2>Education</h2>
-							</div>
-							<ul class="resume-list">
-								<li>
-									<h2>2013-2017</h2>
-									<h3>Bachelor of Arts</h3>
-									<h4>Hampshire College</h4>
-
-									<p>Senior thesis: </p>
-									<a href="pdf/Autonomous Truck and Its Implication on the Trucking Industry.pdf">Autonomous Truck and Its Implication on the Trucking Industry</a>
-									<a href="pdf/Securing the Future of Connected Vehicles.pdf">Securing the Future of Connected Vehicles - An Analysis on Challenges and Market Opportunities</a>
-								</li>
-								<li>
-									<h2>2019-2022</h2>
-									<h3>CS Master Candidate</h3>
-									<h4>University of San Francisco</h4>
-								</li>
-							</ul>
-						</section>
-						<!-- Resume section end -->
-						
-						<!-- Review section start -->
-<!-- 						<section class="review-section spad">
-							<div class="section-title">
-								<h2>References</h2>
-							</div>
-							<div class="review-slider owl-carousel">
-								<div class="single-review">
-									<div class="qut">“</div>
-									<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
-									<h3>Robert G. Smith</h3>
-									<h4>Manager, Company</h4>
-								</div>
-								<div class="single-review">
-									<div class="qut">“</div>
-									<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
-									<h3>Robert G. Smith</h3>
-									<h4>Manager, Company</h4>
-								</div>
-								<div class="single-review">
-									<div class="qut">“</div>
-									<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
-									<h3>Robert G. Smith</h3>
-									<h4>Manager, Company</h4>
-								</div>
-							</div>
-						</section> -->
-						<!-- skill section start -->
-<!-- 						<div class="skill-section">
-							<div class="section-title">
-								<h2>Skills</h2>
-							</div>
-							<div class="skills">
-								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress="59"></div>
-									<p>JavaScript</p>
-								</div>
-								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress="42"></div>
-									<p>Java</p>
-								</div>
-								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress="47"></div>
-									<p>Python</p>
-								</div>
-								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress=31></div>
-									<p>MongoDB</p>
-								</div>
-								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress="53"></div>
-									<p>Node.JS</p>
-								</div>
-								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress="31"></div>
-									<p>DevOps</p>
-								</div>
-							</div> -->
-<!-- 							<div class="icon-box-area spad">
-								<div class="icon-box">
-									<i class="fas fa-flag-checkered"></i>
-									<p>Racing</p>
-								</div>
-								<div class="icon-box">
-									<i class="fas fa-code"></i>
-									<p>Programming</p>
-								</div>
-								<div class="icon-box">
-									<i class="fab fa-bitcoin"></i>
-									<p>Bitcoin</p>
-								</div>
-								<div class="icon-box">
-									<i class="fas fa-bicycle"></i>
-									<p>Mountain biking</p>
-								</div>
-								<div class="icon-box">
-									<i class="fas fa-gamepad"></i>
-									<p>Fortnite</p>
-								</div>
-								<div class="icon-box">
-									<i class="fas fa-gamepad"></i>
-									<p>Fortnite</p>
-								</div>
-							</div> -->
-						</div>
-						<!-- skill section end -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Footer section start -->
-	<footer class="footer-section">
-		<div class="container text-center">
-			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+<!-- Page Preloder -->
+<div id="preloder">
+    <div class="loader"></div>
 </div>
-		</div>
-	</footer>
-	<!-- Footer section end -->
-		
 
-	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/magnific-popup.min.js"></script>
-	<script src="js/circle-progress.min.js"></script>
-	<script src="js/main.js"></script>
+<div class="home-three-style">
+    <!-- Header section start -->
+    <header class="header-section">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-8 text-md-right header-buttons">
+                    <a href="./Bill Li resume.pdf" class="site-btn">Resume</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Header section end -->
+
+    <div class="container-fluid p-0">
+        <div class="row m-0">
+            <div class="col-xl-5 col-lg-5 p-0">
+                <div class="main-left-area h-100">
+                    <img src="img/sv.jpg" alt="">
+                    <h2><br> My name is Bill, and this is me. </h2>
+                    <h5><br> (Just kidding. I am not that lame.) </h5>
+
+                    <section class="intro-section">
+                        <figure class="hero-image">
+                            <img src="img/profile.jpg" alt="">
+                        </figure>
+                        <div class="hero-text">
+                            <h2>Bill(Xiang)<br>Li</h2>
+                            <p></p>
+                        </div>
+                        <div class="hero-info pt-5">
+                            <h2>About me</h2>
+                            <ul>
+                                <li><span>Favorite Band</span>Cake🎂</li>
+                                <li><span>Favorite Food</span>Ramen</li>
+                                <li><span>Favorite Editor</span>Vi✌️</li>
+                                <li><span>TABS or SPACES</span>TABS</li>
+                            </ul>
+                        </div>
+                    </section>
+
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/in/xiang-bill-li-6a197188/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/lx93"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-lg-7">
+                <div class="main-right-area">
+                    <!-- Resume section start -->
+                    <section class="resume-section spad pt-0">
+                        <div class="section-title">
+                            <h2>Hi there :)</h2>
+                        </div>
+                        <ul class="resume-list">
+                            <li>
+                                <h3>What I want to learn during the internship</h3>
+                                <br>
+                                <ul>1. have a further understanding of my own strength and weakness as an engineer, and how to build on my strengths and mitigate my weakness</ul>
+                                <ul>2. how to write clean code that is easy to maintain and for others to understand</ul>
+                                <ul>3. effective communication with the team and management skills</ul>
+                                <ul>4. write well designed unit tests, integration tests and end-to-end tests that can be automated and integrated into CI/CD pipeline</ul>
+                                <ul>5. new testing frameworks I haven't used before</ul>
+                                <ul>6. the business model of Lob</ul>
+                                <ul>7. if possible, I would love to work on payment/KYC aspect of the product</ul>
+                            </li>
+                        </ul>
+                    </section>
+                    <!-- Resume section end -->
+
+                    <!-- Resume section start -->
+                    <section class="resume-section spad pt-0">
+                        <div class="section-title">
+                            <h2>Education</h2>
+                        </div>
+                        <ul class="resume-list">
+                            <li>
+                                <h2>2019-2022</h2>
+                                <h3>Masters of Computer Science</h3>
+                                <h4>University of San Francisco</h4>
+                            </li>
+                            <li>
+                                <h2>2013-2017</h2>
+                                <h3>Bachelor of Arts</h3>
+                                <h4>Hampshire College</h4>
+                            </li>
+                        </ul>
+                    </section>
+                    <!-- Resume section end -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+<!-- Footer section start -->
+<footer class="footer-section">
+    <div class="container text-center">
+        <div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </div>
+    </div>
+</footer>
+<!-- Footer section end -->
+
+
+<!--====== Javascripts & Jquery ======-->
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/magnific-popup.min.js"></script>
+<script src="js/circle-progress.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
