--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-xl-5 col-lg-5 p-0">
                 <div class="main-left-area h-100">
                     <img src="img/sv.jpg" alt="">
-                    <h2><br> My name is Bill, and this is me. </h2>
+                    <h2><br> Meet Bill. </h2>
                     <h5><br> (Just kidding. I am not that lame.) </h5>
 
                     <section class="intro-section">
@@ -76,7 +76,7 @@
                     </section>
 
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/xiang-bill-li-6a197188/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/bill-xiang-l-6a197188/"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/lx93"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
@@ -84,26 +84,29 @@
 
             <div class="col-xl-6 col-lg-7">
                 <div class="main-right-area">
-                    <!-- Resume section start -->
+
+                	<!-- Resume section start -->
                     <section class="resume-section spad pt-0">
                         <div class="section-title">
-                            <h2>Hi there :)</h2>
+                            <h2>Work Experience</h2>
                         </div>
                         <ul class="resume-list">
                             <li>
-                                <h3>What I want to learn during the internship</h3>
+                                <h3>Software Engineer Intern</h3>
+                                <h5>CDK Global, San Jose CA, Summer 2020</h5>
                                 <br>
-                                <ul>1. have a further understanding of my own strength and weakness as an engineer, and how to build on my strengths and mitigate my weakness</ul>
-                                <ul>2. how to write clean code that is easy to maintain and for others to understand</ul>
-                                <ul>3. effective communication with the team and management skills</ul>
-                                <ul>4. write well designed unit tests, integration tests and end-to-end tests that can be automated and integrated into CI/CD pipeline</ul>
-                                <ul>5. new testing frameworks I haven't used before</ul>
-                                <ul>6. the business model of Lob</ul>
-                                <ul>7. if possible, I would love to work on payment/KYC aspect of the product</ul>
+                                <p>Worked with a small agile team on optimizing existing ​NodeJS​ codebase to increase application performance and database efficiency, automating ​test framework​ and covering the codebase with well designed tests, as well as implementing A​PIs​ for a brand new product.</p>
+                            </li>
+                            <li>
+                                <h3>Software Engineer Intern</h3>
+                                <h5>Point Payment Technology, Chapel Hill NC, 2017-2018</h5>
+                                <br>
+                                <p>Launched a fintech startup at UNC Chapel Hill accelerator to provide small businesses with mobile app based prepaid debit payment solutions. Worked with a small team and built the tech stack from scratch powered by NodeJS, React and AWS</p>
                             </li>
                         </ul>
                     </section>
                     <!-- Resume section end -->
+
 
                     <!-- Resume section start -->
                     <section class="resume-section spad pt-0">
@@ -112,14 +115,12 @@
                         </div>
                         <ul class="resume-list">
                             <li>
-                                <h2>2019-2022</h2>
                                 <h3>Masters of Computer Science</h3>
-                                <h4>University of San Francisco</h4>
+                                <h4>University of San Francisco, 2019-2022</h4>
                             </li>
                             <li>
-                                <h2>2013-2017</h2>
-                                <h3>Bachelor of Arts</h3>
-                                <h4>Hampshire College</h4>
+                                <h3>Business and Entrepreneurship</h3>
+                                <h4>Hampshire College, 2013-2017</h4>
                             </li>
                         </ul>
                     </section>
