Add project44 position

--- a/index.html
+++ b/index.html
@@ -92,14 +92,20 @@
                         </div>
                         <ul class="resume-list">
                             <li>
+                                <h3>Software Engineer</h3>
+                                <h5><b>project44</b>, Remote, 2021-Present</h5>
+                                <br>
+                                <p>Crafted, deployed and supported performant production software on AWS. Shared ownership of all facets of software delivery, including development, operations, and test</p>
+                            </li>
+                            <li>
                                 <h3>Software Engineer Intern</h3>
-                                <h5>CDK Global, San Jose CA, Summer 2020</h5>
+                                <h5><b>CDK Global</b>, San Jose CA, Summer 2020</h5>
                                 <br>
                                 <p>Worked with a small agile team on optimizing existing ​NodeJS​ codebase to increase application performance and database efficiency, automating ​test framework​ and covering the codebase with well designed tests, as well as implementing A​PIs​ for a brand new product.</p>
                             </li>
                             <li>
                                 <h3>Software Engineer Intern</h3>
-                                <h5>Point Payment Technology, Chapel Hill NC, 2017-2018</h5>
+                                <h5><b>Point Payment Technology</b>, Chapel Hill NC, 2017-2018</h5>
                                 <br>
                                 <p>Launched a fintech startup at UNC Chapel Hill accelerator to provide small businesses with mobile app based prepaid debit payment solutions. Worked with a small team and built the tech stack from scratch powered by NodeJS, React and AWS</p>
                             </li>
